# repository

./: .gitignore  README.md
android/drawable/: background.xml  bottom_border.xml  customborder.xml  dotted.xml  gradient_background.xml
arduino/bus/: Bus.cpp  Bus.h
arduino/cmake-sketch/: AVRMakefile  CMakeLists.txt  main.cpp
arduino/diode-thermometer/: diode-thermometer.v1.ino
arduino/ekspander/: ekspander.ino
arduino/expanded-thermometer/: Sketch.fzz  expanded-thermometer.ino
arduino/generator/: generator.ino
arduino/ir-decoder/: decoder.ino
arduino/pwm-controller/: pwm.ino
arduino/serial-comunication/: serial-comunication.ino
arduino/step-motor-driver/: step-motor-driver.ino
arduino/traffic-lights/: schema.fzz
circuit/: filtr-rc-dolnoprzepustowy.txt  filtr-rc-górnoprzepustowy.txt  układ-rc-zaporowy.txt
configurations/: codestyle.cpp-c.xml  codestyle.intellij.xml
cpp-and-c/allegro5/: events-queue.cpp
cpp-and-c/cpp-constructor-explicit/: a.out  main.cpp
docker/: Dockerfile-onboarding-app  dockerfile-centos  dockerfile-httpd  dockerfile-openjdk-11  dockerfile-openjdk-14  dockerfile-postgres-10
freecad/brush-holder/: brush-holder-v2.FCStd  brush-holder-v2.FCStd1  brush-holder-v2.stl  brush-holder-v3.FCStd  brush-holder-v3.FCStd1  brush-holder-v3.stl  brush-holder.FCStd  brush-holder.FCStd1  brush-holder.stl
freecad/connection-5m/: a.stl  b.stl  connection-5m.FCStd  connection-5m.FCStd1
freecad/exercises-482/: exercises-482-Body.stl  exercises-482.FCStd  exercises-482.FCStd1
freecad/flashcards-box/: flashcards-box.FCStd  flashcards-box.FCStd1  flashcards-box.stl
freecad/flashlight-fix-1/: flashlight-fix-1-Body.stl  flashlight-fix-1.FCStd  flashlight-fix-1.FCStd1
freecad/gutter-adapter/: gutter-adapter-Body.stl  gutter-adapter.FCStd  gutter-adapter.FCStd1
freecad/harvester-roll/: part-female-v2.FCStd  part-female-v2.FCStd1  part-female.FCStd  part-female.FCStd1  part-femen-v2.stl  part-femen.stl  part-men-v2.FCStd  part-men-v2.FCStd1  part-men-v2.stl  part-men.FCStd1  part-men.stl
freecad/led-handler/: led-handler-Body.stl  led-handler.FCStd  led-handler.FCStd1
freecad/mercedes-roller/: mercedes-roller-Body.stl  mercedes-roller.FCStd  mercedes-roller.FCStd1
freecad/micro-handlers/: big-wider.FCStd  big-wider.FCStd1  big-wider.stl  big.FCStd  big.FCStd1  big.stl  small.FCStd  small.FCStd1  small.stl
freecad/mouse-activer-box/: mouse-activer-box-bottom.FCStd  mouse-activer-box-bottom.FCStd1  mouse-activer-box-female.FCStd  mouse-activer-box-female.FCStd1  mouse-activer-box-female.stl  mouse-activer-box-male.FCStd  mouse-activer-box-male.FCStd1  mouse-activer-box-male.stl
freecad/surface/: 100x100x0.4.FCStd  100x100x0.4.FCStd1  100x100x0.4.stl  10x10x0.4.FCStd  10x10x0.4.FCStd1  10x10x0.4.stl  200x200x0.1.FCStd1  200x200x0.4.FCStd  200x200x0.4.stl  20x20x0.4.FCStd  20x20x0.4.FCStd1  20x20x0.4.stl  50x50x0.4.FCStd  50x50x0.4.FCStd1  50x50x0.4.stl
freecad/surface-wall/: surface-wall-5x5 1 thin-Body.stl  surface-wall-5x5 1 thin.FCStd
freecad/towel-hangers/: towel-hangers-v2.FCStd  towel-hangers-v2.FCStd1  towel-hangers-v2.stl  towel-hangers.FCStd  towel-hangers.FCStd1
freecad/tube-cover/: tube-cover.FCStd  tube-cover.FCStd1  tube-cover.stl
freecad/turntable-stylus-adapter/: turntable-stylus-adapter-Body.stl  turntable-stylus-adapter.20230924-120100.FCBak  turntable-stylus-adapter.FCStd  turntable-stylus-adapter.FCStd1
help/android/: fragment-template  screenlog.0  view-binding
help/bash/: expansion.sh  if-file-exists.sh  lang-comments.sh  lang-functions.sh  lang-loops.sh  lang-variables.sh  run-command-on-condition.sh  while-print-files-name.sh
help/css/: own-grid
help/html/: newtab  noscript
help/java/: caffeine-use  jpa  jpa-complex-key  jpa-one-to-many-with-complex-key  jpa-query  logback-logstash-json-format  logback-setup
help/linux/: applications-sketch
help/maven/: maven-pom-profiles
help/mongodb/: aggregate  find  size-of-db
help/other/: arche-install.sh
help/tomcat/: spring-boot-config
help/tools/: apt.sh  ctags  curl.sh  cut.sh  dd.sh  docker.sh  ffmpeg.sh  find.sh  findmnt.sh  fsck.sh  git.sh  journalctl.sh  (+20 more)
java/: code-style.xml
jmeter/: Performance tests - For audit test.jmx  Performance tests.jmx
kicad-libraries/: Own.dcm  Own.kicad_sym  Own.lib  Own_Arduino.lib  Own_Contractors.lib  Own_Converters.lib  Own_Modules.lib  Own_Motors.lib  Own_Other.lib  Own_Switches.bck  Own_Switches.dcm  Own_Switches.lib  Own_definitions.lib
ml/: classification.ipynb  linear-regression.ipynb
powershell/: Add-DistributionGroupMember.ps1  Connect-ExchangeOnline.ps1  Create-SelfSignedCertificate.ps1  Create-Users.ps1
projects/tetris/game-cpp/: CMakeLists.txt
projects/tetris/game-cpp/src/: main.cpp
projects/tetris/game-cpp/src/ledgames/: Bitmap.cpp  Bitmap.h  Bootstrap.cpp  Bootstrap.h  Display.cpp  Display.h  GameTetris.cpp  GameTetris.h  Gamepad.cpp  Gamepad.h  common.cpp  common.h
projects/tetris/game-cpp/src/ledgames/tetriminos/: ITetrimino.cpp  ITetrimino.h  JTetrimino.cpp  JTetrimino.h  LTetrimino.cpp  LTetrimino.h  OTetrimino.cpp  OTetrimino.h  STetrimino.cpp  STetrimino.h  TTetrimino.cpp  TTetrimino.h  Tetrimino.cpp  Tetrimino.h  ZTetrimino.cpp  ZTetrimino.h
projects/tetris/tetris/: CMakeLists.txt
projects/tetris/tetris-arduino/: CMakeLists.txt
projects/tetris/tetris-arduino/include/: Audio.h  Bitmap.h  Bootstrap.h  Display.h  GameTetris.h  Gamepad.h  board.h  common.h
projects/tetris/tetris-arduino/include/tetriminos/: ITetrimino.h  JTetrimino.h  LTetrimino.h  OTetrimino.h  STetrimino.h  TTetrimino.h  Tetrimino.h  ZTetrimino.h
projects/tetris/tetris-arduino/src/: Bitmap.cpp  GameTetris.cpp  common.cpp  main.cpp
projects/tetris/tetris-arduino/src/boards/arduinoboard/: Audio.cpp  Bootstrap.cpp  Display.cpp  Gamepad.cpp
projects/tetris/tetris-arduino/src/boards/pcboard/: Bootstrap.cpp  Display.cpp  Gamepad.cpp
projects/tetris/tetris-arduino/src/tetriminos/: ITetrimino.cpp  JTetrimino.cpp  LTetrimino.cpp  OTetrimino.cpp  STetrimino.cpp  TTetrimino.cpp  Tetrimino.cpp  ZTetrimino.cpp
(+1177 files in other folders)
